--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- <meta property="og:url" content=""> -->
 		<title>AbrnYa - CS:GO hack</title>
 		<!-- <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"> -->
-		<link rel="stylesheet" href="assets/styles.css">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 
 	<body>
