--- a/索引.html
+++ b/索引.html
@@ -32,9 +32,9 @@
 				</div>
 				
 				<div>
-					<a href="https://gitee.com/ce2333/csgo/releases" target="_blank" class="button regular"
+					<a href="https://gitee.com/ce2333/csgo2/releases" target="_blank" class="button regular"
 						id="download_btn">下载程序</a>
-					<a href="https://gitee.com/ce2333/csgo" target="_blank" class="button regular">下载源码</a><br>
+					<a href="https://gitee.com/ce2333/csgo2" target="_blank" class="button regular">下载源码</a><br>
 				</div>
 			</div>
 			
